set(NAME maker_taker_atomic)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BINANCE_USDS_FUTURES)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BYBIT_DERIVATIVES)
# add_compile_definitions(CCAPI_ENABLE_LOG_DEBUG)
add_compile_definitions(CCAPI_ENABLE_LOG_INFO)
add_compile_definitions(CCAPI_ENABLE_LOG_WARN)
add_compile_definitions(CCAPI_ENABLE_LOG_ERROR)
add_compile_definitions(CCAPI_ENABLE_LOG_FATAL)
add_compile_definitions(CCAPI_APP_ENABLE_LOG_INFO)
add_executable(${NAME} main.cpp)
